# TCast

./: CMakeLists.txt  main.cpp  test.json
assets/: interface.rcss  interface.rml  rml.rcss  startup.rml  test_img.tga
include/: ButtonListener.h  Helper.h  Projector.h  RmlUi.h  Shell.h  Window.h
libs/freetype_x64-windows/: CONTROL
libs/freetype_x64-windows/share/freetype/: vcpkg.spdx.json  vcpkg_abi_info.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
saves/: recent.path
saves/folderSaves/: unterwasserwelt.tct
saves/folderSaves/aw - Kopie (2)/: dww.json
saves/folderSaves/dwawd - Kopie - Kopie - Kopie/: dwa.json
saves/folderSaves/test/: projectData.json  test.json
saves/folderSaves/testproj - Kopie/: projectData.json
saves/folderSaves/testproj3/: projectData.json
saves/folderSaves/unterwasserwelt/: projectData.json
src/: Projector.cpp  RmlUi.cpp  Window.cpp  interface.rcss  interface.rml  main.cpp  rml.rcss
